# DistributedTodoList

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
sources/: CMakeLists.txt  Calculator.cc  Calculator.h  main.cc
tests/: CMakeLists.txt  Calculator_Test.cc  main.cc
